--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">I Am Poor</string>
+    <string name="I_Am_Poor"> I Am Poor</string>
+    <string name="todo">TODO</string>
 </resources>
